# CS-E4780-project

./: LICENSE  README.md
project1/: BENCHMARK_RESULTS.md  README.md  main.py  pyproject.toml  report.md  test_1000.csv  test_small.csv
project1/config/: citibike_patterns.yaml  patterns.yaml
project1/outputs/: matches.txt
project1/src/project1/: cep_runner.py  citibike_2017_formatter.py  citibike_formatter.py  citibike_occupancy.py  hot_paths_patterns_2017.py  pattern_loader.py  runner.py  synth_generator.py
